# beansprout

./: .gitignore  BUILD.bazel  MODULE.bazel  README.beanprice.md  README.md  README.smart_importer.md  bean_check.py  bean_format.py  bean_gulp.py  bean_gulp_test.py  bean_price.py  bean_quote.py  bean_sprout.py  bean_sprout_test.py  treeify.py
.clinerules/: project-overview  project-overview.md
.github/: copilot-instructions.md
beansprout/: BUILD.bazel  __init__.py
beansprout/command/: BUILD.bazel  __init__.py  merge.py  merge_test.py
beansprout/config/: BUILD.bazel  __init__.py  __init___test.py
beansprout/importer/: BUILD.bazel  __init__.py  account_predictor.py  account_predictor_test.py  merge.py  merge_test.py  tokenizer.py  tokenizer_test.py  types.py
beansprout/importer/importers/: BUILD.bazel  __init__.py  moneyforward.py  moneyforward_test.py
beansprout/importer/processors/: BUILD.bazel  __init__.py  base.py  file_writer.py  file_writer_test.py  identity_importer_test.py  model_trainer.py  text_preserving_parser.py  text_preserving_parser_test.py
beansprout/importer/processors/testdata/parser/: comment_attached_entries.beancount  commented_entries_only.beancount  commented_entry_to_free_text.beancount  entry_to_commented_entry.beancount  free_text_to_commented_entry.beancount  single_comment.beancount
beansprout/importer/processors/testdata/writer/: mixed_last.golden.beancount
beansprout/plugins/: BUILD.bazel  check_metadata.py  check_metadata_test.py  commodity_pattern.py  commodity_pattern_test.py  comprehensive_balance.py  comprehensive_balance_test.py  fiscal_income_expense.py  fiscal_income_expense_test.py  infer_metadata.py  infer_metadata_test.py  inherit_metadata.py  inherit_metadata_test.py  leafonly.py  leafonly_test.py  price_completion.py  price_completion_test.py  print.py  trading_validation.py  trading_validation_test.py
beansprout/quoter/: BUILD.bazel  __init__.py  commodity_finder.py  commodity_finder_test.py  expression_parser.py  quote_fetcher.py  quote_fetcher_test.py  quote_writer.py  quote_writer_test.py
beansprout/quoter/sources/: BUILD.bazel  __init__.py  cache_manager.py  cache_manager_test.py  dispatching.py  dispatching_test.py  example.py  memory_cache_manager_test.py
beansprout/writer/: BUILD.bazel  file_merger.py  file_merger_test.py  file_rewriter.py  file_rewriter_test.py  file_writer.py  file_writer_test.py  identity_importer.py  identity_importer_test.py  text_preserving_parser.py  text_preserving_parser_test.py  types.py
beansprout/writer/testdata/parser/: comment_attached_commented_entries.beancount  commented_entry_to_entry.beancount  comments.beancount  entries_only.beancount  entry_to_comment.beancount  entry_to_free_text.beancount  free_text.beancount  free_text_to_entry.beancount  mixed.beancount  mixed_reversed.beancount
beansprout/writer/testdata/writer/: full_scenario.golden.beancount  full_scenario.root.beancount  full_scenario.source.beancount  mixed_basic.golden.beancount  mixed_reversed.golden.beancount  mixed_wrong_order.golden.beancount
data/: BUILD.bazel  expense_accounts.tsv
importers/: BUILD.bazel  __init__.py  account_predictor.py  account_predictor_test.py  merge.py  merge_test.py  moneyforward.py  moneyforward_test.py  tokenizer.py  tokenizer_test.py
quoters/: BUILD.bazel  __init__.py  commodity_finder.py  commodity_finder_test.py  example.py  mock_yahoo.py  quote_fetcher.py  quote_fetcher_test.py  quote_writer.py  quote_writer_test.py  yahoo.py
quoters/testdata/: test-commodities.beancount
src/main/python/: BUILD.bazel  bean_doctor.py  bean_example.py  bean_gulp.py
src/main/python/data/: income_accounts.tsv
src/main/python/importers/: moneyforward.py  moneyforward_test.py
