load("@beansprout_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")

py_binary(
    name = "bean-sprout",
    srcs = ["bean_sprout.py"],
    main = "bean_sprout.py",
    visibility = ["//visibility:public"],
    deps = [
        requirement("click"),
        requirement("beancount"),
        requirement("beangulp"),
        requirement("beanprice"),
        "//beansprout/config",
        "//beansprout/importer",
        "//beansprout/quoter",
    ],
)

# Package for top-level Python files
py_package(
    name = "beansprout_pkg",
    packages = [
        "bean_sprout",
        "beansprout",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":bean-sprout",
    ],
)

# Wheel packaging rule
py_wheel(
    name = "whl",
    distribution = "beansprout",
    entry_points = {
        "console_scripts": [
            "bean-sprout = bean_sprout:main",
        ],
    },
    python_tag = "py3",
    requires_file = "//third_party:requirements.in",
    version = "0.1.0",
    deps = [
        ":beansprout_pkg",
    ],
)
