load("@beancount_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "importers",
    srcs = glob(
        ["*.py"],
        exclude = ["*_test.py"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        requirement("beancount"),
        requirement("beangulp"),
    ],
)

py_test(
    name = "moneyforward_test",
    srcs = ["moneyforward_test.py"],
    deps = [
        ":importers",
        requirement("beancount"),
    ],
)

py_test(
    name = "account_predictor_test",
    srcs = ["account_predictor_test.py"],
    deps = [
        ":importers",
        requirement("beancount"),
    ],
)
