load("@beancount_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "importers",
    visibility = ["//visibility:public"],
    deps = [
        ":moneyforward",
        requirement("beancount"),
        requirement("beangulp"),
    ],
)

py_library(
    name = "account_predictor",
    srcs = ["account_predictor.py"],
    deps = [":tokenizer"],
)

py_library(
    name = "moneyforward",
    srcs = ["moneyforward.py"],
    deps = [":account_predictor"],
)

py_library(
    name = "tokenizer",
    srcs = ["tokenizer.py"],
)

py_test(
    name = "moneyforward_test",
    srcs = ["moneyforward_test.py"],
    deps = [
        ":moneyforward",
        requirement("beancount"),
        requirement("beangulp"),
    ],
)

py_test(
    name = "account_predictor_test",
    srcs = ["account_predictor_test.py"],
    deps = [
        ":account_predictor",
        requirement("beancount"),
    ],
)

py_test(
    name = "tokenizer_test",
    srcs = ["tokenizer_test.py"],
    deps = [
        ":tokenizer",
    ],
)
