load("@beansprout_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "importer",
    srcs = [
        "__init__.py",
        "types.py",
    ],
    deps = [
        requirement("beangulp"),
    ],
)
