load("@beansprout_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "quoter",
    srcs = [
        "__init__.py",
        "commodity_finder.py",
        "quote_fetcher.py",
        "quote_writer.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//beansprout/quoter/sources",
        "//beansprout/writer",
        requirement("beancount"),
        requirement("beanprice"),
        requirement("requests"),
    ],
)

# Directory for storing test data files for quoters
filegroup(
    name = "testdata",
    srcs = [
        "testdata/test-commodities.beancount",
    ],
    visibility = ["//visibility:public"],
)

py_test(
    name = "commodity_finder_test",
    srcs = ["commodity_finder_test.py"],
    data = [":testdata"],
    deps = [
        ":quoter",
        requirement("beancount"),
    ],
)

py_test(
    name = "quote_fetcher_test",
    srcs = ["quote_fetcher_test.py"],
    data = [":testdata"],
    deps = [
        ":quoter",
        requirement("beancount"),
        requirement("beanprice"),
    ],
)

py_test(
    name = "quote_writer_test",
    srcs = ["quote_writer_test.py"],
    deps = [
        ":quoter",
        requirement("beancount"),
    ],
)
