"""Build rules for the specific importers implementations."""

load("@rules_python//python:defs.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "importers",
    srcs = [
        "__init__.py",
        "moneyforward.py",
    ],
    deps = [
        "//beansprout/importer:account_predictor",
        "@beancount_deps//beancount",
        "@beancount_deps//beangulp",
    ],
)

py_test(
    name = "moneyforward_test",
    srcs = ["moneyforward_test.py"],
    deps = [
        ":importers",
        "//beansprout/importer:account_predictor",
        "@beancount_deps//beancount",
    ],
)
