"""Build rules for the specific importers implementations."""

load("@beansprout_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "importers",
    srcs = [
        "__init__.py",
    ],
    deps = [
        requirement("beancount"),
        requirement("beangulp"),
    ],
)
