"""Build rules for the beansprout importers processors package."""

load("@beansprout_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "processors",
    srcs = [
        "__init__.py",
        "base.py",
        "file_writer.py",
    ],
    deps = [
        "//beansprout/importer:merge",
        requirement("beancount"),
        requirement("beangulp"),
    ],
)
