load("@beansprout_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "sources",
    srcs = [
        "__init__.py",
        "cache_manager.py",
        "dispatching.py",
        "example.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//beansprout/quoter:expression_parser",
        requirement("beancount"),
        requirement("beanprice"),
        requirement("requests"),
    ],
)

py_test(
    name = "dispatching_test",
    srcs = ["dispatching_test.py"],
    deps = [
        ":sources",
        requirement("beancount"),
        requirement("beanprice"),
    ],
)

py_test(
    name = "cache_manager_test",
    srcs = ["cache_manager_test.py"],
    deps = [
        ":sources",
        requirement("beancount"),
        requirement("beanprice"),
    ],
)

py_test(
    name = "memory_cache_manager_test",
    srcs = ["memory_cache_manager_test.py"],
    deps = [
        ":sources",
        requirement("beancount"),
        requirement("beanprice"),
    ],
)
