load("@beancount_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

# Common dependencies for all beancount commands
BEANCOUNT_DEPS = [
    requirement("beancount"),
    requirement("beangulp"),
]

py_binary(
    name = "bean-gulp",
    srcs = ["bean_gulp.py"],
    data = [
        "data/expense_accounts.tsv",
        "data/income_accounts.tsv",
    ],
    main = "bean_gulp.py",
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/python/importers",
        "@beancount_deps//beancount",
        "@beancount_deps//beangulp",
    ],
)

# bean-check command
py_binary(
    name = "bean-check",
    srcs = ["bean_check.py"],
    main = "bean_check.py",
    visibility = ["//visibility:public"],
    deps = ["@beancount_deps//beancount"],
)

# bean-doctor command
py_binary(
    name = "bean-doctor",
    srcs = ["bean_doctor.py"],
    main = "bean_doctor.py",
    visibility = ["//visibility:public"],
    deps = BEANCOUNT_DEPS,
)

# bean-format command
py_binary(
    name = "bean-format",
    srcs = ["bean_format.py"],
    main = "bean_format.py",
    visibility = ["//visibility:public"],
    deps = BEANCOUNT_DEPS,
)

# bean-example command
py_binary(
    name = "bean-example",
    srcs = ["bean_example.py"],
    main = "bean_example.py",
    visibility = ["//visibility:public"],
    deps = BEANCOUNT_DEPS,
)

# treeify command
py_binary(
    name = "treeify",
    srcs = ["treeify.py"],
    main = "treeify.py",
    visibility = ["//visibility:public"],
    deps = BEANCOUNT_DEPS,
)
